with camera buttons and refresh button

--- a/index.html
+++ b/index.html
@@ -58,6 +58,14 @@
                     <div class="row">
                         <a href="#"> <img class="img-responsive" src="http://imgur.com/bVJIOj5.jpg" alt=""></a>
                     </div>
+                    <hr>
+                    <div class="row">
+                        <button type="button" class="btn btn-labeled btn-primary">
+                            <span class="btn-label"><i class="glyphicon glyphicon-camera"></i></span>Add Slides</button>
+                        
+                        <button type="button" class="btn btn-labeled btn-success">
+                            <span class="btn-label"><i class="glyphicon glyphicon-refresh"></i></span>Refresh</button>
+                    </div>
                 </ul>
             </div>
         </div>
