with camera api

--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
         <!-- Page Content -->
         <div id="page-content-wrapper">
             <h1>Simple Sidebar</h1>
-            <!--
-            <div id="examplePadBasic"></div>-->
+            <div id="examplePadBasic"></div>
         </div>
         <!-- /#page-content-wrapper -->
     </div>
