--- a/index.html
+++ b/index.html
@@ -31,70 +31,40 @@
                         CHI2017 CLC Tool
                     </a>
                     </li>
-<<<<<<< HEAD
-                    <div class="imgFrame">
-                        <div class="row">
-                            <a href="#"> <img id="imgFrame" class="img-responsive" src="http://imgur.com/UBOTllp.jpg" tabindex="0" alt=""></a>p1
-                        </div>
-                        <hr>
-                        <div class="row">
-                            <a href="#"> <img id="imgFrame" class="img-responsive" src="http://imgur.com/74fTXqv.jpg" tabindex="0" alt=""></a>p2
-                        </div>
-                        <hr>
-                        <div class="row">
-                            <a href="#"> <img id="imgFrame" class="img-responsive" src="http://imgur.com/T73fYI2.jpg" tabindex="0" alt=""></a>p3
-                        </div>
-                        <hr>
-                        <div class="row">
-                            <a href="#"> <img id="imgFrame" class="img-responsive" src="http://imgur.com/SYk7C9w.jpg" tabindex="0" alt=""></a>p4
-                        </div>
-                        <hr>
-                        <div class="row">
-                            <a href="#"> <img id="imgFrame" class="img-responsive" src="http://imgur.com/X3gapju.jpg" tabindex="0" alt=""></a>p5
-                        </div>
-                        <hr>
-                        <div class="row">
-                            <a href="#"> <img id="imgFrame" class="img-responsive" src="http://imgur.com/pv8OwMO.jpg" tabindex="0" alt=""></a>p6
-                        </div>
-                        <hr>
-                        <div class="row">
-                            <a href="#"> <img id="imgFrame" class="img-responsive" src="http://imgur.com/bVJIOj5.jpg" tabindex="0" alt=""></a>p7
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="row">
-                        <img src="about:blank" alt="" id="show-picture" class="img-responsive">
-=======
+
                     <li class="icon">
                       <a href="javascript:void(0);" onclick="extend()">&#9776;</a>
                     </li>                      
                     <div class="row">
-                        <a id="1" href="javascript: return false;" onclick="changePad(this.id);"> <img class="img-responsive" src="http://imgur.com/UBOTllp.jpg" alt=""></a>
+                        <a id="1" href="javascript: return false;" onclick="changePad(this.id);"> <img id="imgFrame" class="img-responsive" src="http://imgur.com/UBOTllp.jpg" tabindex="0" alt=""></a>
                     </div>
                     <hr>
                     <div class="row">
-                        <a id="2" href="javascript: return false;" onclick="changePad(this.id);"> <img class="img-responsive" src="http://imgur.com/74fTXqv.jpg" alt=""></a>
+                        <a id="2" href="javascript: return false;" onclick="changePad(this.id);"> <img id="imgFrame" class="img-responsive" src="http://imgur.com/74fTXqv.jpg" tabindex="0" alt=""></a>
                     </div>
                     <hr>
                     <div class="row">
-                        <a id="3" href="javascript: return false;" onclick="changePad(this.id);"> <img class="img-responsive" src="http://imgur.com/T73fYI2.jpg" alt=""></a>
+                        <a id="3" href="javascript: return false;" onclick="changePad(this.id);"> <img id="imgFrame" class="img-responsive" src="http://imgur.com/T73fYI2.jpg" tabindex="0" alt=""></a>
                     </div>
                     <hr>
                     <div class="row">
-                        <a id="4" href="javascript: return false;" onclick="changePad(this.id);"> <img class="img-responsive" src="http://imgur.com/SYk7C9w.jpg" alt=""></a>
+                        <a id="4" href="javascript: return false;" onclick="changePad(this.id);"> <img id="imgFrame" class="img-responsive" src="http://imgur.com/SYk7C9w.jpg" tabindex="0" alt=""></a>
                     </div>
                     <hr>
                     <div class="row">
-                        <a id="5" href="javascript: return false;" onclick="changePad(this.id);"> <img class="img-responsive" src="http://imgur.com/X3gapju.jpg" alt=""></a>
+                        <a id="5" href="javascript: return false;" onclick="changePad(this.id);"> <img id="imgFrame" class="img-responsive" src="http://imgur.com/X3gapju.jpg" tabindex="0" alt=""></a>
                     </div>
                     <hr>
                     <div class="row">
-                        <a id="6" href="javascript: return false;" onclick="changePad(this.id);"> <img class="img-responsive" src="http://imgur.com/pv8OwMO.jpg" alt=""></a>
+                        <a id="6" href="javascript: return false;" onclick="changePad(this.id);"> <img id="imgFrame" class="img-responsive" src="http://imgur.com/pv8OwMO.jpg" tabindex="0" alt=""></a>
                     </div>
                     <hr>
                     <div class="row">
-                        <a id="7" href="javascript: return false;" onclick="changePad(this.id);"> <img class="img-responsive" src="http://imgur.com/bVJIOj5.jpg" alt=""></a>
->>>>>>> bef2ec76b337038b238754463490ddd8a027d2b1
+                        <a id="7" href="javascript: return false;" onclick="changePad(this.id);"> <img id="imgFrame" class="img-responsive" src="http://imgur.com/bVJIOj5.jpg" tabindex="0" alt=""></a>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <img src="about:blank" alt="" id="show-picture" class="img-responsive">
                     </div>
                     <hr>
                     <div class="row">
@@ -129,17 +99,12 @@
     <script src="js/upload-photo.js"></script>
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+    
     <!-- Menu Toggle Script -->
     <script>
         // Initially display the pad of the first slide
          $('.mypad').pad({'padId':'1'}); // sets the pad id and puts the pad in the div 
 
-<<<<<<< HEAD
-    // The most basic example
-    $('#examplePadBasic').pad({
-        'padId': 'test'
-    }); // sets the pad id and puts the pad in the div
-=======
         function changePad(id) {
             $('.mypad').pad({'padId':id});
         } 
@@ -149,7 +114,7 @@
             $("#sidebar-wrapper").toggleClass("extend");
             $("#wrapper").toggleClass("extend");
         }         
->>>>>>> bef2ec76b337038b238754463490ddd8a027d2b1
+
     </script>
 </body>
 
